--- a/index.html
+++ b/index.html
@@ -3,9 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Robert</title>
+    <title>About Robert</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Hello</h1>
+    <header>
+        <h1>Learn more about Robert Trewolla</h1>
+    </header>
+    <nav>
+        <a href="#Experience">Experience</a>
+        <a href="#Hobbies">Hobbies</a>
+        <a href="#Projects">Projects</a>
+    </nav>
+    <div class="box">
+        <ul>
+            <h2>Experience</h2>
+            <li>Game Developer</li>
+            <li>Software programer</li>
+            <li>HTML & CSS</li>
+        </ul>
+    </div>
+    <div class="box">
+        <ul>
+            <h2>Hobbies</h2>
+            <li>Sport Player</li>
+                <ol>
+                    <li>Football</li>
+                    <li>Soccer</li>
+                    <li>Basketball</li>
+                    <li>Baseball</li>
+                    <li>Dodgeball</li>
+                </ol>
+        </ul>
+    </div>
+    <div class="box">
+        <ul>
+            <h2>Education</h2>
+            <li>Grade 9-10 STEM Program</li>
+            <li>Highschool Grade 12 Graduate</li>
+            <li>Mohawk College Dual Credit HTML & CSS</li>
+        </ul>
+    </div>
 </body>
 </html>
